[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/scenes/main.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/combat/HandView.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/combat/FieldView.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/view_components/board/board_view.gd" type="Script" id=4]
[ext_resource path="res://content/fonts/Beleren2016-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/scenes/combat/PlayerAvatarView.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/combat/CombatManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/view_components/board/player_view.gd" type="Script" id=9]
[ext_resource path="res://src/scenes/gui/StartMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/scenes/rendered_bg.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=3]
size = 39
use_filter = true
extra_spacing_bottom = -4
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.113725, 0.133333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.54902, 0.376471, 0.145098, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.54902, 0.376471, 0.145098, 1 )
border_color = Color( 0.54902, 0.376471, 0.145098, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.113725, 0.133333, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="CombatManager" parent="." instance=ExtResource( 8 )]

[node name="RenderBackground" parent="CombatManager" instance=ExtResource( 12 )]

[node name="Board" type="Node" parent="CombatManager"]
script = ExtResource( 4 )

[node name="PlayerView" type="Node" parent="CombatManager/Board"]
script = ExtResource( 9 )

[node name="PlayerAvatar" parent="CombatManager/Board/PlayerView" instance=ExtResource( 6 )]
margin_top = 294.0
margin_bottom = 334.0

[node name="HandView" parent="CombatManager/Board/PlayerView" instance=ExtResource( 2 )]
position = Vector2( 960, 1064 )

[node name="FieldView" parent="CombatManager/Board/PlayerView" instance=ExtResource( 3 )]
position = Vector2( 960, 640 )

[node name="EnemyView" type="Node" parent="CombatManager/Board"]
script = ExtResource( 9 )

[node name="PlayerAvatar" parent="CombatManager/Board/EnemyView" instance=ExtResource( 6 )]
margin_top = -484.0
margin_bottom = -444.0

[node name="FieldView" parent="CombatManager/Board/EnemyView" instance=ExtResource( 3 )]
position = Vector2( 960, 315 )

[node name="CanvasModulate" type="CanvasModulate" parent="CombatManager"]
visible = false
color = Color( 0.34902, 0.34902, 0.34902, 1 )

[node name="GUI" type="Node" parent="CombatManager"]

[node name="ButtonStartBattle" type="Button" parent="CombatManager/GUI"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -80.0
margin_right = -8.0
margin_bottom = -8.0
custom_colors/font_color_hover = Color( 0.54902, 0.376471, 0.145098, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
toggle_mode = true
text = "Start Battle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="StartMenu" parent="GUI" instance=ExtResource( 11 )]
visible = false
